# blog

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
backend/backend/: settings.py
backend/users/: models.py
backend/users/migrations/: 0001_initial.py
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  velite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/actions/: actions.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/_posts/[...slug]/: page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/custom-error/: page.tsx
frontend/src/app/og/[...slug]/: route.tsx
frontend/src/app/posts/: page.tsx
frontend/src/app/posts/[...slug]/: page.tsx
frontend/src/app/terms-of-use/: page.tsx
frontend/src/components/: blog-cover-image.tsx  footer.tsx  header.tsx  main-heading.tsx  mdx-components.tsx  mode-toggle.tsx  navbar-link.tsx  page-time.tsx  post-date.tsx  post-excerpt.tsx  post-item.tsx  post-nav-button.tsx  share-buttons.tsx
frontend/src/components/ui/: toast.tsx
frontend/src/lib/: consts.ts  nav-icons.ts  utils.ts
frontend/src/styles/: mdx.css
nginx/: Dockerfile
nginx/conf.d/: main.conf.sample
