[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["badmagick329"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
python-dotenv = "^1.0.1"
django-rest-knox = "^4.2.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"


[tool.poetry.group.dev.dependencies]
django-stubs = "^4.2.7"
djangorestframework-stubs = "^3.14.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["./backend"]
exclude = ["**/node_modules", "**/__pycache__"]
